[project]
name = "math-papers-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarvu78",email = "sarvagya07jain@gmail.com"}
]
requires-python = ">=3.13, <4.0.0"
dependencies = [
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "unstructured[all-docs] (>=0.18.27,<0.19.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "arxiv (>=2.4.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "regex (>=2026.1.15,<2027.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "unpywall (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
